--- a/index.html
+++ b/index.html
@@ -1,4 +1,14 @@
+<!doctype html>
+<html lang="en">
+<head>
+    <meta charset="utf-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>Project</title>
+    <link rel="stylesheet" href="/assets/css/styles.css">
+</head>
 <body>
     <h1>welcome</h1>
     <h2>hi omg i dids it!!!!!</h2>
+    <script type="module" src="/assets/js/main.js"></script>
 </body>
+</html>
