--- a/index.html
+++ b/index.html
@@ -7,8 +7,9 @@
     <link rel="stylesheet" href="/assets/css/styles.css">
 </head>
 <body>
-    <h1>welcome</h1>
-    <h2>hi omg i dids it!!!!!</h2>
-    <script type="module" src="/assets/js/main.js"></script>
+    <div id ="main-container">
+      <h1>welcome</h1>
+      <h2>hi omg i dids it!!!!!</h2>
+    </div>
 </body>
 </html>
